--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 
 <head>
@@ -8,7 +8,7 @@
   <meta name="keywords" content="resume, CV, personal Vcard, personal portfolio, html portfolio">
 	<meta name="author" content="Stephen James Morris">
 
-	<title>Allan John Morris – Responsive Personal Portfolio vCard</title>
+	<title>Stephen James Morris – Responsive Personal Portfolio vCard</title>
 
   <!-- Web Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
